--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,6 +11,12 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
+$navbar-color: #F4F1EA;
+$brand-primary:   $blue;
+$brand-success:   $green;
+$brand-info:      $yellow;
+$brand-danger:    $red;
+$brand-warning:   $orange;
 $primary:    $blue;
 $success:    $green;
 $info:       $yellow;
