--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,8 @@
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
+$orange: #EE7600;
+$green: #556B2F
+;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
