--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,8 @@
 <section class="book-section">
   <div class="book-container">
+    <div class="book-heart">
+      <%= render 'heart' %>
+    </div>
     <div class="book-cover" style="background: url(<%= @book.image_url %>) center / cover no-repeat;">
     </div>
     <div>
