--- a/app/views/books/_heart.html.erb
+++ b/app/views/books/_heart.html.erb
@@ -1,9 +1,9 @@
-<% if current_user.favorited_book?(@book) %>
-  <%= link_to favorite_path(current_user.find_favorite(@book)), method: :delete, remote: true do %>
+<% if user_signed_in? && current_user.favorited_book?(@book) %>
+  <%= link_to favorite_path(current_user.find_favorite(@book)), method: :delete do %>
     <i class="fas fa-heart"></i>
   <% end %>
 <% else %>
-  <%= link_to book_favorites_path(@book), method: :post, remote: true do %>
+  <%= link_to book_favorites_path(@book), method: :post do %>
     <i class="far fa-heart"></i>
   <% end %>
 <% end %>
